--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.4.0",
     "clarifai": "^2.9.1",
-    "expo": "~37.0.3",
+    "expo": "^37.0.12",
     "expo-camera": "^8.2.0",
     "expo-permissions": "^8.1.0",
     "react": "~16.9.0",
